--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,12 @@ export(iamReferenceData)
 export(iamSummaryPDF)
 export(processCheck)
 export(write.reportProject)
-importFrom(dplyr,tbl_df)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(lusweave,swR)
 importFrom(lusweave,swclose)
 importFrom(lusweave,swlatex)
@@ -33,11 +38,13 @@ importFrom(magclass,setNames)
 importFrom(magclass,write.report2)
 importFrom(methods,formalArgs)
 importFrom(methods,is)
+importFrom(mip,extractVariableGroups)
 importFrom(mip,validationpdf)
 importFrom(quitte,as.quitte)
 importFrom(quitte,is.quitte)
 importFrom(readxl,read_excel)
 importFrom(reshape2,melt)
+importFrom(tibble,as_tibble)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,write.csv)
