--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: iamc
 Type: Package
 Title: IAMC Tools
-Version: 0.29.1
-Date: 2021-02-15
+Version: 0.30.0
+Date: 2021-02-24
 Authors@R: c(person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
              person("Cornelia", "Auer", role = "aut"),
              person("Anastasis", "Giannousakis", role = "aut"),
@@ -23,7 +23,8 @@ Imports: quitte(>= 0.3066),
          methods,
          reshape2,
          readxl,
-         writexl
+         writexl,
+         tibble
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
