--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: iamc
+Package: piamModelTests
 Type: Package
-Title: IAMC Tools
-Version: 0.30.0
-Date: 2021-02-24
+Title: piamModelTests Tools
+Version: 0.31.0
+Date: 2021-03-17
 Authors@R: c(person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
              person("Cornelia", "Auer", role = "aut"),
              person("Anastasis", "Giannousakis", role = "aut"),
