updated AgMIP reporting that was outdated

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,3 +2,12 @@
 ^\.Rproj\.user$
 ^\.buildlibrary$
 ^.*\.zenodo.json$
+^\.pre-commit-config\.yaml$
+^Makefile$
+^workflow$
+^.lintr$
+^tests/.lintr$
+^vignettes/.lintr$
+^codecov\.yml$
+^\.github$
+^.*CITATION.cff$
