--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(magclass,mbind)
 importFrom(magclass,new.magpie)
 importFrom(magclass,read.report)
 importFrom(magclass,setNames)
+importFrom(magclass,write.report)
 importFrom(magclass,write.report2)
 importFrom(methods,formalArgs)
 importFrom(methods,is)
