--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: piamModelTests
 Type: Package
 Title: piamModelTests Tools
-Version: 0.31.3
-Date: 2021-08-11
+Version: 0.31.4
+Date: 2023-09-12
 Authors@R: c(person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
              person("Cornelia", "Auer", role = "aut"),
              person("Anastasis", "Giannousakis", role = "aut"),
@@ -27,7 +27,9 @@ Imports: quitte(>= 0.3066),
          tibble
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
-Suggests: knitr,
-          rmarkdown
+RoxygenNote: 7.2.3
+Suggests: 
+    covr,
+    knitr,
+    rmarkdown
 VignetteBuilder: knitr
